--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
 body { 
     font-family: Arial, sans-serif; 
     text-align: center; 
-    background-color: #f4f4f4; 
+    background-color: #fdc2e7; 
     margin: 0; 
     padding: 0; 
     } 
     .container { 
     max-width: 500px; 
     margin: 50px auto; 
-    background: white; 
+    background: rgb(252, 226, 243); 
     padding: 20px; 
     border-radius: 10px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0 10px rgba(255, 0, 191, 0.1); 
     }
     button { 
         margin: 10px 5px; 
